correct problem, solution on small, medium displays

--- a/assets/solution.scss
+++ b/assets/solution.scss
@@ -11,32 +11,42 @@
   width: 100%;
   
   .solution-text--wrap {
-    width: 36rem;
-    height: 15rem;  
-    @media screen and (max-width: $medium)  {
-      width: 100%;
-      padding-bottom: 2rem;
+    width: 90%;
+    padding: 4em 0;
+    height: auto;
+    
+    @media screen and (min-width: $not-small)  {
+      width: 80%;
     }
-    @media screen and (max-width: 320px)  {
-      padding-bottom: 10rem;  
+    
+    @media screen and (min-width: $large)  {
+      width: 60%;  
     }
 
     .solution-item--heading {
       text-align: center;
-      padding-top: 2rem;
-      letter-spacing: 0.25em;
+
+      @media screen and (min-width: $not-small)  {
+        letter-spacing: 0.25em;
+      }
     } 
 
     .solution-item--main-heading {
-      font-size: 2.5rem;
+      font-size: 2rem;
       text-align: center;
       padding-top: 2rem;
+      line-height: 1.5;
+
+      @media screen and (min-width: $not-small)  {
+        font-size: 2.5rem;
+      }
     } 
 
     .solution-text {
       padding-top: 2rem;
       font-size: 1.125rem;
       text-align: center;
+      line-height: 1.5;
     }
   }
 }
